--- a/prototool.yaml
+++ b/prototool.yaml
@@ -32,3 +32,6 @@ generate:
       type: go
       flags: plugins=grpc
       output: build/go-cs3apis
+    - name: micro
+      type: go
+      output: build/go-cs3apis
